// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a list of articles 1`] = `
Array [
  <li
    className="section"
    id="abc123"
  >
    <div
      className="header row-fluid"
      name="source"
    >
      <h2>
        aPublisher
      </h2>
      <span
        className="spacer"
      />
      <time>
        <span>
          less than a minute ago
        </span>
      </time>
    </div>
    <div
      className="article"
    >
      <div
        className="header"
      >
        <h3>
          <a
            href="http://test.example.com/1"
          >
            An Interesting Article
          </a>
        </h3>
      </div>
      <div
        className="description"
        dangerouslySetInnerHTML={
          Object {
            "__html": "blah blah blah",
          }
        }
      />
      <div
        className="footer visible-xs"
      >
        <time>
          <span>
            less than a minute ago
          </span>
        </time>
      </div>
    </div>
  </li>,
  <li
    className="section"
    id="def456"
  >
    <div
      className="header row-fluid"
      name="source"
    >
      <h2>
        unknown
      </h2>
      <span
        className="spacer"
      />
      <time>
        <span>
          less than a minute ago
        </span>
      </time>
    </div>
    <div
      className="article"
    >
      <div
        className="header"
      >
        <h3>
          <a
            href="http://ipso.com/1"
          >
            An Boring Article
          </a>
        </h3>
      </div>
      <div
        className="description"
        dangerouslySetInnerHTML={
          Object {
            "__html": "ipso facto",
          }
        }
      />
      <div
        className="footer visible-xs"
      >
        <time>
          <span>
            less than a minute ago
          </span>
        </time>
      </div>
    </div>
  </li>,
]
`;

exports[`renders accurately 1`] = `
<li
  className="section"
  id="abc123"
>
  <div
    className="header row-fluid"
    name="source"
  >
    <h2>
      aPublisher
    </h2>
    <span
      className="spacer"
    />
    <time>
      <span>
        less than a minute ago
      </span>
    </time>
  </div>
  <div
    className="article"
  >
    <div
      className="header"
    >
      <h3>
        <a
          href="http://test.example.com/1"
        >
          An Interesting Article
        </a>
      </h3>
    </div>
    <div
      className="description"
      dangerouslySetInnerHTML={
        Object {
          "__html": "blah blah blah",
        }
      }
    />
    <div
      className="footer visible-xs"
    >
      <time>
        <span>
          less than a minute ago
        </span>
      </time>
    </div>
  </div>
</li>
`;
